# docs/swagger/auth.swagger.json
@@ -118,6 +118,38 @@
         ]
       }
     },
+    "/auth/accounts/revoke-refresh-tokens": {
+      "get": {
+        "summary": "Revoke Refresh Tokens",
+        "description": "Revoke all refresh tokens associated with a given account.",
+        "operationId": "Auth_RevokeRefreshTokens",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/pbRevokeRefreshTokensResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "walletAddress",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Auth"
+        ]
+      }
+    },
     "/auth/accounts/verify-access-token": {
       "get": {
         "summary": "Verify Access Token",
@@ -236,6 +268,15 @@
       "properties": {
         "session": {
           "$ref": "#/definitions/pbSession"
+        }
+      }
+    },
+    "pbRevokeRefreshTokensResponse": {
+      "type": "object",
+      "properties": {
+        "numSessionsRevoked": {
+          "type": "string",
+          "format": "int64"
         }
       }
     },
